<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.apkglobal.login.SignupActivity">



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@mipmap/ic_launcher"/>



        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radio">


            <RadioButton
                android:layout_width="180sp"
                android:id="@+id/seeker"
                android:layout_height="wrap_content"
                android:text="@string/seeker"

                android:textColor="@color/colorAccent"/>
            <RadioButton
                android:layout_width="180sp"
                android:text="@string/company"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/seeker"
                android:id="@+id/company"

                android:textColor="@color/colorPrimary"
                />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/c1"
            android:visibility="gone"
            >

            <EditText
                android:id="@+id/company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_company"
                android:drawableLeft="@drawable/ic_action_user"
                android:inputType="text"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                />
        </android.support.design.widget.TextInputLayout>






        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:drawableLeft="@drawable/ic_action_user"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:drawableLeft="@drawable/ic_action_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"

                android:textColor="@android:color/white"/>





        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cpassword"
                android:drawableLeft="@drawable/ic_action_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"/>





        </android.support.design.widget.TextInputLayout>

       <!-- <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="Send OTP"
                android:onClick="sendsms"
                android:id="@+id/btn_sendsms"/>
            <EditText android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mobile"
                android:inputType="text|phone"

                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"/>




        </android.support.design.widget.TextInputLayout>

-->
        <!--<android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="Verify"
                android:onClick="verify"
                android:id="@+id/btn_otp"/>
            <EditText android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_otp"
                android:inputType="text|phone"

                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"/>



        </android.support.design.widget.TextInputLayout>


-->

        <Button android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <!--  Link to Login Screen  -->
        <Button android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dip"

            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp"/>
    </LinearLayout>
    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>


</android.support.constraint.ConstraintLayout>
