<?xml version="1.0" encoding="utf-8"?>
<!--
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.apkglobal.login.LoginActivity">

</android.support.constraint.ConstraintLayout>
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">
        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"

            android:src="@mipmap/ic_launcher"/>




        <!--<RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radio">


            <RadioButton
                android:layout_width="180sp"
                android:id="@+id/seeker"
                android:layout_height="wrap_content"
                android:text="@string/seeker"

                android:textColor="@color/colorAccent"
                android:checked="true"/>
            <RadioButton
                android:layout_width="180sp"
                android:text="@string/company"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/seeker"
                android:id="@+id/company"

                android:textColor="@color/colorPrimary"
                />
        </RadioGroup>

-->


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">





            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:drawableLeft="@drawable/ic_action_user"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:drawableLeft="@drawable/ic_action_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"/>




        </android.support.design.widget.TextInputLayout>

<!--
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Send Sms"
                android:onClick="sendsms"
                android:id="@+id/btn_sendsms"/>
            <EditText android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/hint_mobile"
                android:inputType="text|phone"

                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"/>



        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="Verify"
                android:onClick="verify"
                android:id="@+id/btn_verify"/>
            <EditText android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/hint_otp"
                android:inputType="text|phone"

                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"/>



        </android.support.design.widget.TextInputLayout>-->

        <!--<android.support.v7.widget.CardView
            android:layout_height="50dp"
            android:layout_width="300dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/cardView"
            android:layout_marginBottom="31dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="25dp"
            app:cardBackgroundColor="@color/colorAccent">
        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

        <TextView android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/textView"
            android:textSize="18sp"
            android:textColor="#fff"
            android:text="Login"
            android:layout_centerInParent="true"/>

    </RelativeLayout>
        </android.support.v7.widget.CardView>
-->






        <!--  Login Button  -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@color/colorAccent"
            android:text="@string/btn_login"

            android:textColor="@android:color/black" />
        <Button android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="30dp"

            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"/>
        <!--  Link to Login Screen  -->
        <Button android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:background="@null"
            android:text="Create New User "
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp"/>


    </LinearLayout>
    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>

</RelativeLayout>